--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <!--
       Notice the div with id='root' below.
       The whole ReactJS application would be put in it.
+      Check the ../src/index.js file for more info.
     -->
     <div id="root"></div>
   </body>
